# Orgx

./: .env.example  .gitignore  README.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/versions/: README.md
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  health.py  public.py  tenants.py
apps/web/: README.md  package-lock.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/workspace/: page.tsx
apps/web/src/lib/: config.ts  tenant.ts
docs/: api-spec.md  architecture.md  blockchain.md  data-model.md  features.md  mvp-roadmap.md  prd.md
infra/: README.md
